Project Images Properly Formatted

--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -155,10 +155,9 @@ ul {
 }
 
 .projectPic {
-  float: left;
   padding: 10px;
   width: 200px;
-  display: block;
+  vertical-align: top;
 }
 
 img {
